[project]
name = "base-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxopt>=1.3.2",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pgmpy>=1.0.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
